force-app/main/default/objects/SuRF_DGX_HOT_CPL_Contacts__c/SuRF_DGX_HOT_CPL_Contacts__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community : NPN Compliance :</description>
    <label>SuRF_DGX_HOT_CPL_Contacts</label>
    <nameField>
        <label>SuRF_DGX_HOT_CPL_Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SuRF_DGX_HOT_CPL_Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>