force-app/main/default/objects/SuRF_DGX_HOT_CPL_Contacts__c/fields/Curriculum_Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Curriculum_Course_Title__c</fullName>
    <label>Curriculum_Course_Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>