force-app/main/default/objects/SuRF_DGX_HOT_CPL_Contacts__c/fields/Partner_Training_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Partner_Training_Compliance__c</fullName>
    <label>Partner Training Compliance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>